--- a/mvcloud.ipynb
+++ b/mvcloud.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "source": [
-    "## Use Case 1 - How to get all the tenants associated with current credentials."
+    "## Snippet 1 - How to get all the tenants associated with current credentials."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -95,7 +95,7 @@
   },
   {
    "source": [
-    "## Use Case 2 - Authenticate against the default Tenant"
+    "## Snippet 2 - Authenticate against the default Tenant"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -145,7 +145,7 @@
   },
   {
    "source": [
-    "## Use Case 3 - Submit a CSP template document for CSPM inspection."
+    "## Snippet 3 - Submit a CSP template document for CSPM inspection."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -243,7 +243,7 @@
   },
   {
    "source": [
-    "## Use Case 4 - Get the incidents generated"
+    "## Snippet 4 - Get the incidents generated"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -360,7 +360,7 @@
   },
   {
    "source": [
-    "## Use Case 5 - Get the audit log"
+    "## Snippet 5 - Get the audit log"
    ],
    "cell_type": "markdown",
    "metadata": {}
